code recheck and minor changes

--- a/genderclassifier.ipynb
+++ b/genderclassifier.ipynb
@@ -666,7 +666,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Save the model\n",
+    "#Save the model for future use.\n",
     "from tensorflow.keras.models import load_model\n",
     "model.save(os.path.join('models','gender_classifier.h5'))"
    ]
