gc with bias mit and train till val_loss !improve

--- a/genderclassifier.ipynb
+++ b/genderclassifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,9 +12,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-07-30 17:07:06.846687: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:996] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2023-07-30 17:07:06.967364: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:996] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2023-07-30 17:07:06.967535: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:996] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n"
+     ]
+    }
+   ],
    "source": [
     "#limit VRAM usage\n",
     "import tensorflow as tf\n",
@@ -25,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,14 +60,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 47009 files belonging to 2 classes.\n",
+      "Found 47009 files belonging to 2 classes.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-07-30 17:07:39.591914: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:996] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2023-07-30 17:07:39.592077: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:996] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2023-07-30 17:07:39.592202: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:996] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2023-07-30 17:07:40.437733: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:996] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2023-07-30 17:07:40.437898: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:996] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2023-07-30 17:07:40.438022: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:996] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2023-07-30 17:07:40.438113: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1635] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 7243 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 3080, pci bus id: 0000:07:00.0, compute capability: 8.6\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Found 11649 files belonging to 2 classes.\n"
      ]
     }
@@ -77,29 +106,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1 0 0 1 1 1 1 0 0 0 1 1 0 0 0 1 0 0 1 1 1 0 1 1 1 0 1 1 0 1 0 1]\n",
-      "[1 1 0 0 1 0 1 1 0 1 0 0 0 1 0 1 1 1 0 0 0 1 1 1 1 0 1 0 1 0 0 1]\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-07-26 18:13:35.221257: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'Placeholder/_0' with dtype string and shape [47009]\n",
-      "\t [[{{node Placeholder/_0}}]]\n",
-      "2023-07-26 18:13:35.221481: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'Placeholder/_4' with dtype int32 and shape [47009]\n",
+      "2023-07-30 17:07:43.045355: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'Placeholder/_4' with dtype int32 and shape [47009]\n",
       "\t [[{{node Placeholder/_4}}]]\n",
-      "2023-07-26 18:13:35.236456: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'Placeholder/_0' with dtype string and shape [11649]\n",
-      "\t [[{{node Placeholder/_0}}]]\n",
-      "2023-07-26 18:13:35.236680: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'Placeholder/_4' with dtype int32 and shape [11649]\n",
+      "2023-07-30 17:07:43.045661: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'Placeholder/_4' with dtype int32 and shape [47009]\n",
+      "\t [[{{node Placeholder/_4}}]]\n",
+      "2023-07-30 17:07:43.068180: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'Placeholder/_4' with dtype int32 and shape [11649]\n",
+      "\t [[{{node Placeholder/_4}}]]\n",
+      "2023-07-30 17:07:43.068396: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'Placeholder/_4' with dtype int32 and shape [11649]\n",
       "\t [[{{node Placeholder/_4}}]]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 0 0 1 0 1 0 0 0 1 0 1 1 1 0 1 0 1 1 0 0 1 0 0 0 1 0 1 0 1 1 0]\n",
+      "[1 1 1 1 0 1 0 1 1 0 1 1 0 1 0 0 0 1 1 0 1 0 0 0 0 0 1 1 1 0 1 1]\n"
      ]
     }
    ],
@@ -683,6 +712,101 @@
     "    print('prediction: Male')\n",
     "else:\n",
     "    print('prediction: Female')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 47009 files belonging to 2 classes.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-07-30 17:39:35.002003: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'Placeholder/_4' with dtype int32 and shape [47009]\n",
+      "\t [[{{node Placeholder/_4}}]]\n",
+      "2023-07-30 17:39:35.002267: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'Placeholder/_0' with dtype string and shape [47009]\n",
+      "\t [[{{node Placeholder/_0}}]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import aif360\n",
+    "import tensorflow as tf\n",
+    "import pandas as pd\n",
+    "from aif360.datasets import BinaryLabelDataset\n",
+    "from aif360.metrics import BinaryLabelDatasetMetric\n",
+    "from aif360.algorithms.preprocessing import Reweighing\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "# Load your data as a tf.data.Dataset object\n",
+    "mydata = tf.keras.utils.image_dataset_from_directory('data')\n",
+    "\n",
+    "# Convert the tf.data.Dataset object to a pandas DataFrame object\n",
+    "data = pd.DataFrame(columns = ['features', 'gender'])\n",
+    "for features, labels in mydata:\n",
+    "    data = pd.concat([data, pd.DataFrame({'features': [features.numpy()], 'gender': [labels.numpy()]})], ignore_index=True)\n",
+    "\n",
+    "# Convert the pandas DataFrame object to a BinaryLabelDataset object\n",
+    "data = BinaryLabelDataset(df = data, label_names = ['gender'], \n",
+    "                          favorable_label = 1, unfavorable_label = 0)\n",
+    "\n",
+    "# Split your data into train and test sets\n",
+    "train_data, test_data = data.split([0.7], shuffle = True)\n",
+    "\n",
+    "# Define the privileged and unprivileged groups based on the label\n",
+    "# For example, if you want to compare male and female groups\n",
+    "privileged_groups = [{'gender': 1}] # male\n",
+    "unprivileged_groups = [{'gender': 0}] # female\n",
+    "\n",
+    "# Compute the mean difference metric on the train data\n",
+    "metric_train = BinaryLabelDatasetMetric(train_data, privileged_groups = privileged_groups,\n",
+    "                                        unprivileged_groups = unprivileged_groups)\n",
+    "mean_difference_train = metric_train.mean_difference()\n",
+    "print(\"Mean difference on train data: \", mean_difference_train)\n",
+    "\n",
+    "# Compute the mean difference metric on the test data\n",
+    "metric_test = BinaryLabelDatasetMetric(test_data, privileged_groups = privileged_groups,\n",
+    "                                       unprivileged_groups = unprivileged_groups)\n",
+    "mean_difference_test = metric_test.mean_difference()\n",
+    "print(\"Mean difference on test data: \", mean_difference_test)\n",
+    "\n",
+    "# Apply a pre-processing technique to mitigate bias in the train data\n",
+    "# For example, use Reweighing algorithm\n",
+    "# Reweighing assigns weights to each sample in the training set such that the distributions of the outcomes in the privileged and unprivileged groups are similar\n",
+    "RW = Reweighing()\n",
+    "RW.fit(train_data, privileged_groups = privileged_groups, unprivileged_groups = unprivileged_groups)\n",
+    "train_data_transformed = RW.transform(train_data)\n",
+    "\n",
+    "# Compute the mean difference metric on the transformed train data\n",
+    "metric_train_transformed = BinaryLabelDatasetMetric(train_data_transformed, privileged_groups = privileged_groups,\n",
+    "                                                    unprivileged_groups = unprivileged_groups)\n",
+    "mean_difference_train_transformed = metric_train_transformed.mean_difference()\n",
+    "print(\"Mean difference on transformed train data: \", mean_difference_train_transformed)\n",
+    "\n",
+    "# Train your gender classifier on the transformed train data\n",
+    "# For example, use a logistic regression model from sklearn\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "model = LogisticRegression()\n",
+    "X_train = train_data_transformed.features # feature matrix\n",
+    "y_train = train_data_transformed.labels # label vector\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "# Make predictions on the test data using your gender classifier\n",
+    "X_test = test_data.features # feature matrix\n",
+    "y_test = test_data.labels # label vector\n",
+    "y_pred = model.predict(X_test) # predicted labels\n",
+    "\n",
+    "# Evaluate the accuracy of your gender classifier on the test data\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "print(\"Accuracy of gender classifier on test data: \", accuracy)\n"
    ]
   }
  ],
