use validation set instead of train;ds path change

--- a/genderclassifier.ipynb
+++ b/genderclassifier.ipynb
@@ -43,7 +43,7 @@
     "import cv2\n",
     "import imghdr\n",
     "\n",
-    "data_dir = 'data'\n",
+    "data_dir = 'datasets/dataset1/data'\n",
     "image_exts = ['jpg', 'jpeg', 'bmp', 'png']\n",
     "for image_class in os.listdir(data_dir):\n",
     "    for image in os.listdir(os.path.join(data_dir, image_class)):\n",
@@ -96,8 +96,8 @@
     "import numpy as np\n",
     "from matplotlib import pyplot as plt\n",
     "#building a data pipeline\n",
-    "data = tf.keras.utils.image_dataset_from_directory('data')\n",
-    "validation = tf.keras.utils.image_dataset_from_directory('validation')\n",
+    "data = tf.keras.utils.image_dataset_from_directory('datasets/dataset1/data')\n",
+    "validation = tf.keras.utils.image_dataset_from_directory('datasets/dataset1/validation')\n",
     "#scaling the data to be between 0 and 1 from 0 to 255\n",
     "# logic - scaled = batch[0] / 255 but we apply this directly to the pipeline\n",
     "data = data.map(lambda x, y: (x / 255, y)) # type: ignore\n",
