--- a/gcwithbiasmit.ipynb
+++ b/gcwithbiasmit.ipynb
@@ -31,12 +31,25 @@
     "import matplotlib.pyplot as plt\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import accuracy_score, confusion_matrix, precision_score, recall_score\n",
+    "import tensorflow as tf\n",
     "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.layers import Conv2D, MaxPooling2D, Flatten, Dense, Dropout\n",
     "from tensorflow.keras.callbacks import EarlyStopping\n",
     "from aif360.datasets import BinaryLabelDataset\n",
     "from aif360.metrics import BinaryLabelDatasetMetric, ClassificationMetric\n",
     "from aif360.algorithms.preprocessing import Reweighing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#limit VRAM usage\n",
+    "gpus = tf.config.experimental.list_physical_devices('GPU')\n",
+    "for gpu in gpus:\n",
+    "    tf.config.experimental.set_memory_growth(gpu, True)"
    ]
   },
   {
@@ -426,11 +439,8 @@
     "# Compile and fit the model on the reweighted train set\n",
     "model.compile(optimizer=\"adam\", loss=\"binary_crossentropy\", metrics=[\"accuracy\"])\n",
     "early_stopping = EarlyStopping(monitor=\"val_loss\", patience=5)\n",
-    "history = model.fit(X_train_rw, y_train_rw,\n",
-    "                    batch_size=32,\n",
-    "                    epochs=50,\n",
-    "                    validation_data=(X_test, y_test),\n",
-    "                    callbacks=[early_stopping])"
+    "history = model.fit(X_train_rw, y_train_rw, batch_size=32, epochs=50,\n",
+    "                    validation_data=(X_test, y_test), callbacks=[early_stopping])"
    ]
   },
   {
