--- a/gcwithbiasmitds1.ipynb
+++ b/gcwithbiasmitds1.ipynb
@@ -32,9 +32,9 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import accuracy_score, confusion_matrix, precision_score, recall_score\n",
     "import tensorflow as tf\n",
-    "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.layers import Conv2D, MaxPooling2D, Flatten, Dense, Dropout\n",
-    "from tensorflow.keras.callbacks import EarlyStopping\n",
+    "from tensorflow.keras.models import Sequential # type: ignore\n",
+    "from tensorflow.keras.layers import Conv2D, MaxPooling2D, Flatten, Dense, Dropout # type: ignore\n",
+    "from tensorflow.keras.callbacks import EarlyStopping # type: ignore\n",
     "from aif360.datasets import BinaryLabelDataset\n",
     "from aif360.metrics import BinaryLabelDatasetMetric, ClassificationMetric\n",
     "from aif360.algorithms.preprocessing import Reweighing"
