code cleanup and optimisation

--- a/gcwithoutbiasmitds1.ipynb
+++ b/gcwithoutbiasmitds1.ipynb
@@ -57,7 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load the dataset and create a dataframe with image paths and labels\n",
+    "#Load the dataset and create a dataframe with image paths and labels\n",
     "dataset_path = \"datasets/dataset1/data/\"\n",
     "images = []\n",
     "labels = []\n",
@@ -76,7 +76,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load the validation set and create a dataframe with image paths and labels\n",
+    "#Load the validation set and create a dataframe with image paths and labels\n",
     "validation_path = \"datasets/dataset1/validation/\"\n",
     "images = []\n",
     "labels = []\n",
@@ -95,7 +95,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define a function to preprocess the images: resize, grayscale, histogram equalization\n",
+    "#Define a function to preprocess the images: resize, grayscale, histogram equalization\n",
     "def preprocess_image(image_path):\n",
     "  image = cv2.imread(image_path)\n",
     "  image = cv2.resize(image, (64, 64))\n",
@@ -112,7 +112,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Apply the preprocessing function to the images and convert the labels to numeric values\n",
+    "#Apply the preprocessing function to the images and convert the labels to numeric values\n",
     "X_train = np.array([preprocess_image(image) for image in df[\"image\"]])\n",
     "y_train = np.array([0 if label == \"male\" else 1 for label in df[\"label\"]])\n",
     "\n",
@@ -322,11 +322,10 @@
     }
    ],
    "source": [
-    "# Compile and fit the model on the reweighted train set\n",
+    "#Compile and fit the model on the reweighted train set\n",
     "model.compile(optimizer=\"adam\", loss=\"binary_crossentropy\", metrics=[\"accuracy\"])\n",
     "early_stopping = EarlyStopping(monitor=\"val_loss\", patience=5)\n",
-    "history = model.fit(X_train, y_train, batch_size=32, epochs=50,\n",
-    "                    validation_data=(X_test, y_test), callbacks=[early_stopping])"
+    "history = model.fit(X_train, y_train, batch_size=32, epochs=50, validation_data=(X_test, y_test), callbacks=[early_stopping])"
    ]
   },
   {
@@ -346,7 +345,7 @@
     }
    ],
    "source": [
-    "# Plot the training and validation accuracy and loss curves\n",
+    "#Plot the training and validation accuracy and loss curves\n",
     "plt.figure(figsize=(12,6))\n",
     "plt.subplot(1,2,1)\n",
     "plt.plot(history.history[\"accuracy\"], label=\"train accuracy\")\n",
@@ -383,7 +382,7 @@
     }
    ],
    "source": [
-    "# Evaluate the model on the test set\n",
+    "#Evaluate the model on the test set\n",
     "y_pred = model.predict(X_test).round().ravel()\n",
     "test_acc = accuracy_score(y_test, y_pred)\n",
     "precision = precision_score(y_test, y_pred)\n",
