Final improvements and fixes

--- a/archive/gcwithbiasmitds2.ipynb
+++ b/archive/gcwithbiasmitds2.ipynb
@@ -116,11 +116,25 @@
    "source": [
     "#Apply the preprocessing function to the images and convert the labels to numeric values\n",
     "X_train = np.array([preprocess_image(image) for image in df[\"image\"]])\n",
-    "y_train = np.array([0 if label == \"male\" else 1 for label in df[\"label\"]])\n",
-    "\n",
+    "y_train = np.array([0 if label == \"male\" else 1 for label in df[\"label\"]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "X_val = np.array([preprocess_image(image) for image in vf[\"image\"]])\n",
-    "y_val = np.array([0 if label == \"male\" else 1 for label in vf[\"label\"]])\n",
-    "\n",
+    "y_val = np.array([0 if label == \"male\" else 1 for label in vf[\"label\"]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "X_test = np.array([preprocess_image(image) for image in testf[\"image\"]])\n",
     "y_test = np.array([0 if label == \"male\" else 1 for label in testf[\"label\"]])"
    ]
