--- a/archive/final files before cleanup/gc-ds2-smallermodel.ipynb
+++ b/archive/final files before cleanup/gc-ds2-smallermodel.ipynb
@@ -68,7 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Load the training set and create a dataframe with image paths and labels\n",
+    "#Load the dataset and create a dataframe with image paths and labels\n",
     "dataset_path = \"datasets/dataset2celebA/Train/\"\n",
     "images = []\n",
     "labels = []\n",
@@ -106,7 +106,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Load the test set and create a dataframe with image paths and labels\n",
+    "#Load the validation set and create a dataframe with image paths and labels\n",
     "test_path = \"datasets/dataset2celebA/Test/\"\n",
     "images = []\n",
     "labels = []\n",
@@ -281,7 +281,7 @@
     }
    ],
    "source": [
-    "#Compile and fit the model on the train set\n",
+    "#Compile and fit the model on the reweighted train set\n",
     "model.compile(optimizer=\"adam\", loss=\"binary_crossentropy\", metrics=[\"accuracy\"])\n",
     "early_stopping = EarlyStopping(monitor=\"val_loss\", patience=5)\n",
     "history = model.fit(X_train, y_train, batch_size=32, epochs=50, validation_data=(X_val, y_val), callbacks=[early_stopping])"
