--- a/archive/final files before cleanup/gc-ds2-largemodel-and-vgg16-attempt-fail.ipynb
+++ b/archive/final files before cleanup/gc-ds2-largemodel-and-vgg16-attempt-fail.ipynb
@@ -36,7 +36,7 @@
     "from tensorflow.keras.layers import Conv2D, MaxPooling2D, Flatten, Dense, Dropout # type: ignore\n",
     "from tensorflow.keras.callbacks import EarlyStopping # type: ignore\n",
     "from aif360.datasets import BinaryLabelDataset\n",
-    "#from aif360.metrics import BinaryLabelDatasetMetric, ClassificationMetric\n",
+    "from aif360.metrics import BinaryLabelDatasetMetric, ClassificationMetric\n",
     "from aif360.algorithms.preprocessing import Reweighing"
    ]
   },
@@ -521,6 +521,190 @@
     "print(\"Test Recall:\", recall)\n",
     "print(\"Test confusion matrix:\")\n",
     "print(test_cm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Create a binary label dataset from the train set for aif360\n",
+    "train_df = pd.DataFrame(X_train.reshape(-1, 64*64))\n",
+    "train_df[\"label\"] = y_train\n",
+    "train_df[\"gender\"] = 0\n",
+    "train_dataset = BinaryLabelDataset(favorable_label=1, unfavorable_label=0, df=train_df, label_names=[\"label\"], protected_attribute_names=[\"gender\"], unprivileged_protected_attributes=[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(train_dataset.features.shape)\n",
+    "print(train_dataset.features.size)\n",
+    "\n",
+    "#Extract the features and labels from the reweighted train set\n",
+    "X_train = train_dataset.features[:, :-1].reshape(-1, 64, 64, 1)\n",
+    "y_train = train_dataset.labels.ravel()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from aif360.metrics import BinaryLabelDatasetMetric\n",
+    "#Compute the disparate impact and statistical parity difference metrics for the train set\n",
+    "metric_dataset = BinaryLabelDatasetMetric(train_dataset, unprivileged_groups=[{\"gender\": 0}], privileged_groups=[{\"gender\": 1}])\n",
+    "print(\"Disparate impact:\", metric_dataset.disparate_impact())\n",
+    "print(\"Statistical parity difference:\", metric_dataset.statistical_parity_difference())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Apply the reweighing algorithm to mitigate bias in the training set\n",
+    "RW = Reweighing(unprivileged_groups=[{\"gender\": 0}], privileged_groups=[{\"gender\": 1}])\n",
+    "train_dataset_rw = RW.fit_transform(train_dataset)\n",
+    "\n",
+    "#Compute the metrics for the reweighted train set\n",
+    "metric_dataset_rw = BinaryLabelDatasetMetric(train_dataset_rw, unprivileged_groups=[{\"gender\": 0}], privileged_groups=[{\"gender\": 1}])\n",
+    "print(\"Disparate impact after reweighing:\", metric_dataset_rw.disparate_impact())\n",
+    "print(\"Statistical parity difference after reweighing:\", metric_dataset_rw.statistical_parity_difference())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(train_dataset_rw.features.shape)\n",
+    "print(train_dataset_rw.features.size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Extract the features and labels from the reweighted train set\n",
+    "X_train_rw = train_dataset_rw.features[:, :-1].reshape(-1, 64, 64, 1)\n",
+    "y_train_rw = train_dataset_rw.labels.ravel()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = Sequential()\n",
+    "\n",
+    "model.add(Conv2D(32, (3, 3), activation=\"relu\", input_shape=(64, 64, 1)))\n",
+    "model.add(MaxPooling2D((2, 2)))\n",
+    "\n",
+    "model.add(Conv2D(64, (3, 3), activation=\"relu\"))\n",
+    "model.add(MaxPooling2D((2, 2)))\n",
+    "\n",
+    "model.add(Conv2D(128, (3, 3), activation=\"relu\"))\n",
+    "model.add(MaxPooling2D((2, 2)))\n",
+    "\n",
+    "model.add(Flatten())\n",
+    "\n",
+    "model.add(Dense(256, activation=\"relu\"))\n",
+    "model.add(Dropout(0.5))\n",
+    "model.add(Dense(1, activation=\"sigmoid\"))\n",
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Compile and fit the model on the reweighted train set\n",
+    "model.compile(optimizer=\"adam\", loss=\"binary_crossentropy\", metrics=[\"accuracy\"])\n",
+    "early_stopping = EarlyStopping(monitor=\"val_loss\", patience=5)\n",
+    "history = model.fit(X_train_rw, y_train_rw, batch_size=32, epochs=50, validation_data=(X_test, y_test), callbacks=[early_stopping])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Plot the training and validation accuracy and loss curves\n",
+    "plt.figure(figsize=(12,6))\n",
+    "plt.subplot(1,2,1)\n",
+    "plt.plot(history.history[\"accuracy\"], label=\"train accuracy\")\n",
+    "plt.plot(history.history[\"val_accuracy\"], label=\"validation accuracy\")\n",
+    "plt.xlabel(\"Epoch\")\n",
+    "plt.ylabel(\"Accuracy\")\n",
+    "plt.legend()\n",
+    "plt.subplot(1,2,2)\n",
+    "plt.plot(history.history[\"loss\"], label=\"train loss\")\n",
+    "plt.plot(history.history[\"val_loss\"], label=\"validation loss\")\n",
+    "plt.xlabel(\"Epoch\")\n",
+    "plt.ylabel(\"Loss\")\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Evaluate the model on the test set\n",
+    "y_pred = model.predict(X_test).round().ravel()\n",
+    "test_acc = accuracy_score(y_test, y_pred)\n",
+    "precision = precision_score(y_test, y_pred)\n",
+    "recall = recall_score(y_test, y_pred)\n",
+    "test_cm = confusion_matrix(y_test, y_pred)\n",
+    "print(\"Test accuracy:\", test_acc)\n",
+    "print(\"Test Precision:\", precision)\n",
+    "print(\"Test Recall:\", recall)\n",
+    "print(\"Test confusion matrix:\")\n",
+    "print(test_cm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Create a binary label dataset from the test set for aif360\n",
+    "test_df = pd.DataFrame(X_test.reshape(-1, 64*64))\n",
+    "test_df[\"label\"] = y_test\n",
+    "test_df[\"gender\"] = 0\n",
+    "test_dataset = BinaryLabelDataset(favorable_label=1, unfavorable_label=0, df=test_df, label_names=[\"label\"], protected_attribute_names=[\"gender\"], unprivileged_protected_attributes=[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Compute the classification metrics for the test set\n",
+    "metric_classifier = ClassificationMetric(test_dataset, test_dataset.copy(), unprivileged_groups=[{\"gender\": 0}], privileged_groups=[{\"gender\": 1}])\n",
+    "print(\"Accuracy:\", metric_classifier.accuracy())\n",
+    "#print(\"Balanced accuracy:\", metric_classifier.balanced_accuracy())\n",
+    "print(\"Equal opportunity difference:\", metric_classifier.equal_opportunity_difference())\n",
+    "print(\"Average odds difference:\", metric_classifier.average_odds_difference())\n",
+    "print(\"Theil index:\", metric_classifier.theil_index())"
    ]
   }
  ],
