--- a/archive/final files before cleanup/gc-ds3-femalepriv.ipynb
+++ b/archive/final files before cleanup/gc-ds3-femalepriv.ipynb
@@ -36,7 +36,7 @@
     "from tensorflow.keras.layers import Conv2D, MaxPooling2D, Flatten, Dense, Dropout # type: ignore\n",
     "from tensorflow.keras.callbacks import EarlyStopping # type: ignore\n",
     "from aif360.datasets import BinaryLabelDataset\n",
-    "#from aif360.metrics import BinaryLabelDatasetMetric, ClassificationMetric\n",
+    "from aif360.metrics import BinaryLabelDatasetMetric, ClassificationMetric\n",
     "from aif360.algorithms.preprocessing import Reweighing"
    ]
   },
@@ -68,7 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Load the training set and create a dataframe with image paths and labels\n",
+    "#Load the dataset and create a dataframe with image paths and labels\n",
     "dataset_path = \"datasets/dataset3gcf2/training\"\n",
     "images = []\n",
     "labels = []\n",
@@ -372,45 +372,74 @@
     "print(train_dataset.features.shape)\n",
     "print(train_dataset.features.size)\n",
     "\n",
-    "#Extract the features and labels from the train set\n",
+    "#Extract the features and labels from the reweighted train set\n",
     "X_train = train_dataset.features[:, :-1].reshape(-1, 64, 64, 1)\n",
     "y_train = train_dataset.labels.ravel()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Disparate impact: nan\n",
+      "Statistical parity difference: nan\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/megatron/miniconda3/envs/tf/lib/python3.9/site-packages/aif360/metrics/binary_label_dataset_metric.py:105: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "  return (self.num_positives(privileged=privileged)\n"
+     ]
+    }
+   ],
    "source": [
-    "#from aif360.metrics import BinaryLabelDatasetMetric\n",
+    "from aif360.metrics import BinaryLabelDatasetMetric\n",
     "#Compute the disparate impact and statistical parity difference metrics for the train set\n",
-    "#metric_dataset = BinaryLabelDatasetMetric(train_dataset, unprivileged_groups=[{\"gender\": 0}], privileged_groups=[{\"gender\": 1}])\n",
-    "#print(\"Disparate impact:\", metric_dataset.disparate_impact())\n",
-    "#print(\"Statistical parity difference:\", metric_dataset.statistical_parity_difference())"
+    "metric_dataset = BinaryLabelDatasetMetric(train_dataset, unprivileged_groups=[{\"gender\": 0}], privileged_groups=[{\"gender\": 1}])\n",
+    "print(\"Disparate impact:\", metric_dataset.disparate_impact())\n",
+    "print(\"Statistical parity difference:\", metric_dataset.statistical_parity_difference())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Disparate impact after reweighing: nan\n",
+      "Statistical parity difference after reweighing: nan\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/megatron/miniconda3/envs/tf/lib/python3.9/site-packages/aif360/algorithms/preprocessing/reweighing.py:66: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "  self.w_p_fav = n_fav*n_p / (n*n_p_fav)\n",
+      "/home/megatron/miniconda3/envs/tf/lib/python3.9/site-packages/aif360/algorithms/preprocessing/reweighing.py:67: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "  self.w_p_unfav = n_unfav*n_p / (n*n_p_unfav)\n"
+     ]
+    }
+   ],
    "source": [
     "#Apply the reweighing algorithm to mitigate bias in the training set\n",
     "RW = Reweighing(unprivileged_groups=[{\"gender\": 0}], privileged_groups=[{\"gender\": 1}])\n",
-    "train_dataset_rw = RW.fit_transform(train_dataset)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "train_dataset_rw = RW.fit_transform(train_dataset)\n",
+    "\n",
     "#Compute the metrics for the reweighted train set\n",
-    "#metric_dataset_rw = BinaryLabelDatasetMetric(train_dataset_rw, unprivileged_groups=[{\"gender\": 0}], privileged_groups=[{\"gender\": 1}])\n",
-    "#print(\"Disparate impact after reweighing:\", metric_dataset_rw.disparate_impact())\n",
-    "#print(\"Statistical parity difference after reweighing:\", metric_dataset_rw.statistical_parity_difference())"
+    "metric_dataset_rw = BinaryLabelDatasetMetric(train_dataset_rw, unprivileged_groups=[{\"gender\": 0}], privileged_groups=[{\"gender\": 1}])\n",
+    "print(\"Disparate impact after reweighing:\", metric_dataset_rw.disparate_impact())\n",
+    "print(\"Statistical parity difference after reweighing:\", metric_dataset_rw.statistical_parity_difference())"
    ]
   },
   {
@@ -429,8 +458,15 @@
    ],
    "source": [
     "print(train_dataset_rw.features.shape)\n",
-    "print(train_dataset_rw.features.size) \n",
-    "\n",
+    "print(train_dataset_rw.features.size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#Extract the features and labels from the reweighted train set\n",
     "X_train_rw = train_dataset_rw.features[:, :-1].reshape(-1, 64, 64, 1)\n",
     "y_train_rw = train_dataset_rw.labels.ravel()"
@@ -633,17 +669,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 1.0\n",
+      "Equal opportunity difference: nan\n",
+      "Average odds difference: nan\n",
+      "Theil index: 0.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/megatron/miniconda3/envs/tf/lib/python3.9/site-packages/aif360/metrics/classification_metric.py:278: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "  TPR=TP / P, TNR=TN / N, FPR=FP / N, FNR=FN / P,\n",
+      "/home/megatron/miniconda3/envs/tf/lib/python3.9/site-packages/aif360/metrics/classification_metric.py:279: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "  GTPR=GTP / P, GTNR=GTN / N, GFPR=GFP / N, GFNR=GFN / P,\n"
+     ]
+    }
+   ],
    "source": [
-    "#Compute the classification metrics for the test set\n",
-    "#metric_classifier = ClassificationMetric(test_dataset, test_dataset.copy(), unprivileged_groups=[{\"gender\": 0}], privileged_groups=[{\"gender\": 1}])\n",
-    "#print(\"Accuracy:\", metric_classifier.accuracy())\n",
+    "# Compute the classification metrics for the test set\n",
+    "metric_classifier = ClassificationMetric(test_dataset, test_dataset.copy(), unprivileged_groups=[{\"gender\": 0}], privileged_groups=[{\"gender\": 1}])\n",
+    "print(\"Accuracy:\", metric_classifier.accuracy())\n",
     "#print(\"Balanced accuracy:\", metric_classifier.balanced_accuracy())\n",
-    "#print(\"Equal opportunity difference:\", metric_classifier.equal_opportunity_difference())\n",
-    "#print(\"Average odds difference:\", metric_classifier.average_odds_difference())\n",
-    "#print(\"Theil index:\", metric_classifier.theil_index())"
+    "print(\"Equal opportunity difference:\", metric_classifier.equal_opportunity_difference())\n",
+    "print(\"Average odds difference:\", metric_classifier.average_odds_difference())\n",
+    "print(\"Theil index:\", metric_classifier.theil_index())"
    ]
   }
  ],
